@@ -4,6 +4,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
 import org.springframework.security.web.server.SecurityWebFilterChain;
@@ -11,7 +12,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.reactive.CorsConfigurationSource;
 import org.springframework.web.cors.reactive.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @RequiredArgsConstructor
 @Configuration
@@ -30,13 +31,11 @@ public class SecurityConfig {
                     log.info("Setting up route authorizations");
                     exchanges
                             .pathMatchers(freeResourceUrls).permitAll()
+                            .pathMatchers(HttpMethod.OPTIONS).permitAll()
                             .anyExchange().permitAll();
                 })
 
-                .cors(cors -> {
-                    log.info("Configuring CORS");
-                    cors.configurationSource(corsConfigurationSource());
-                });
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()));
 
         http.oauth2ResourceServer(oauth2 -> {
             log.info("Configuring OAuth2 Resource Server with JWT");
@@ -51,11 +50,43 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         log.info("Configuring CORS Source");
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173", "http://192.168.1.169:3005"));
-        configuration.setAllowedMethods(Arrays.asList("HEAD", "GET", "POST", "PUT", "DELETE", "PATCH", "OPTION"));
+
+        // Use allowedOriginPatterns for flexibility (note: WebSocket handshake uses HTTP protocol)
+        configuration.setAllowedOriginPatterns(List.of(
+                "http://localhost:5173",
+                "http://localhost:8083"  // Changed from ws:// to http://
+        ));
+
+        // Fixed typo in OPTIONS and added WebSocket specific headers
+        configuration.setAllowedMethods(List.of(
+                "HEAD", "GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"
+        ));
+
         configuration.setAllowCredentials(true);
-        configuration.addAllowedHeader("*");
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type", "correlation_id"));
+
+        // WebSocket specific headers
+        configuration.setAllowedHeaders(List.of(
+                "Authorization",
+                "Cache-Control",
+                "Content-Type",
+                "correlation_id",
+                "Upgrade",          // Needed for WebSocket
+                "Connection",       // Needed for WebSocket
+                "Sec-WebSocket-Key",
+                "Sec-WebSocket-Version",
+                "Sec-WebSocket-Extensions"
+        ));
+
+        // Add exposed headers if needed
+        configuration.setExposedHeaders(List.of(
+                "Upgrade",
+                "Connection",
+                "Sec-WebSocket-Accept"
+        ));
+
+        configuration.addExposedHeader("Sec-WebSocket-Accept");
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
 
